<resources>
    <string name="app_name">Uhelp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profilo">Profilo</string>
    <string name="title_notifiche">Notifiche</string>
    <string name="title_help">Aiuto</string>
    <string name="title_contatti">Contatti</string>
    <string name="u_help">U Help</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pswd">Password dimenticata?</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="ntel">Numero di telefono</string>
    <string name="username">Username</string>
    <string name="logo">Logo</string>
    <string name="iscriviti">Iscriviti</string>
    <string name="accedi">Accedi</string>
    <string name="invia">Invia</string>
    <string name="uhelp">uHelp</string>
    <string name="attiva">Attiva uHelp</string>
    <string name="scordata">Hai dimenticato la password? Inserisci il tuo indirizzo email e ti invieremo un messaggio per il ripristino.</string>

</resources>
